# Tensorium_lang

./: .gitignore  :wa  CMakeLists.txt  Makefile  README.md  codex.yaml  compile_commands.json  contexte_projet.txt  full_project_v2.txt  run_test.sh  tensorium_cc  tensorium_lang
.cache/clangd/index/: AST.hpp.AE689921D2543340.idx  ASTPrinter.cpp.84858B05B7D4DBCB.idx  ASTPrinter.hpp.A62AE5AE7DDC9EB0.idx  Expr.cpp.D364CB622F6A65BD.idx  IndexedAST.hpp.C20A8DE3AFD8B4BA.idx  Lexer.cpp.A123FAE47AED3895.idx  Lexer.hpp.B95BCE7918C8943C.idx  Parser.cpp.3F8A3A61E9E18B9F.idx  Parser.hpp.4D63703E23CB54AE.idx  Sema.cpp.7641202A59DEB058.idx  Sema.hpp.9D1EA4004F7AB259.idx  Token.hpp.9DDB6F753D24CD6D.idx  Visitor.hpp.2C31C436E7EF3703.idx  main.cpp.84B1C1F587026290.idx  tensor_type_checker.hpp.A59674B6313648E8.idx
docs/: tensor_frontend_semantics.md  tensor_typing.md
include/: ast.hpp  lexer.hpp  parser.hpp  tokens.hpp
include/printing/: print_ast.hpp  print_indexed.hpp
include/semantics/: indexed_ast.hpp  semantic_analyzer.hpp  tensor_type.hpp  tensor_type_checker.hpp
include/tensorium/AST/: AST.hpp  ASTPrinter.hpp  IndexedAST.hpp  Visitor.hpp
include/tensorium/Backend/: BackendBuilder.hpp  DomainIR.hpp  IR.hpp  IRPrinter.hpp
include/tensorium/Basic/: TensorSignature.hpp  Token.hpp
include/tensorium/Lex/: Lexer.hpp
include/tensorium/Parse/: Parser.hpp
include/tensorium/Runtime/: CpuRuntime.hpp  Eval.hpp
include/tensorium/Sema/: CallSupport.hpp  ProgramValidator.hpp  Sema.hpp  SymbolTable.hpp  tensor_type_checker.hpp
include/tensorium_mlir/Dialect/Tensorium/IR/: TensoriumDialect.h  TensoriumOps.h  TensoriumOps.td  TensoriumTypes.h
include/tensorium_mlir/Dialect/Tensorium/Transform/: AnalysisPass.h  DissipationPass.h  EinsteinAnalyzeEinsumPass.h  EinsteinCanonicalizePass.h  EinsteinLoweringPass.h  EinsteinValidityPass.h  IndexAnalyzePass.h  IndexRoleAnalysisPass.h  NoOpPass.h  Passes.h  Passes.td  StencilLoweringPass.h
include/tensorium_mlir/Init/: Passes.h  Registry.h
include/tensorium_mlir/Pipeline/: Pipeline.h
include/tensorium_mlir/Semantic/: Einstein.h
lib/: CMakeLists.txt
lib/AST/: ASTPrinter.cpp  Expr.cpp
lib/Backend/: BackendBuilder.cpp
lib/Lex/: Lexer.cpp
lib/Parse/: Parser.cpp
lib/Runtime/: CpuRuntime.cpp  Eval.cpp
lib/Sema/: CallSupport.cpp  ProgramValidator.cpp  Sema.cpp
lib/tensorium_mlir/Dialect/Tensorium/IR/: TensoriumDialect.cpp  TensoriumOps.cpp  TensoriumTypes.cpp
lib/tensorium_mlir/Dialect/Tensorium/Transforms/: AnalysisPass.cpp  DissipationPass.cpp  EinsteinAnalyzeEinsumPass.cpp  EinsteinCanonicalizePass.cpp  EinsteinLoweringPass.cpp  EinsteinValidityPass.cpp  IndexAnalyzePass.cpp  IndexRoleAnalysisPass.cpp  NoOpPass.cpp  Passes.cpp  StencilLoweringPass.cpp
lib/tensorium_mlir/Init/: Passes.cpp  Registry.cpp
lib/tensorium_mlir/Pipeline/: Pipeline.cpp
lib/tensorium_mlir/Semantic/: Einstein.cpp
src/: main.cpp
tests/: 00_simple_op.tns  01_scalar_minimal.tn  02_scalar_with_parameter.tn  03_spacial_derivatives.tn  04_metric_simple.tn  05_tensor_contraction.tn  06_nested_contraction.tn  07_bssn_reduced.tn  08_error_invalid_index.tn  09_error_bad_resolution.tn  10_no_simulation.tn  11_test_tensorium_types.tns  12_test_non_canonical_index.tn  13__error_free_index_unassigned.tn  14_error_duplicate_free_index.tn  15__error_self_contraction.tn  16_valid_permutation.tn  17_error_hidden_index.tn  18_valid_scalar_contraction.tn  19_error_unused_index.tn  20_valid_heavy_contraction.tn  21_test_full.tn  22_BSSN_minimal.tn  23_bssn_like_with_riemann_contract.tn  24_Ricci_conformal_flat.tn  25_deriv_stencil.tn  26_error_unsupported_emit.tn  28_symbolic_unknown_scalar_call_ok.tn  29_executable_unknown_scalar_call_error.tn  30_symbolic_call_nonscalar_arg_error.tn  31_temp_valid_scalar.tn  32_temp_invalid_tensor_rhs.tn  33_temp_use_before_def.tn  34_executable_extern_declared.tn  35_executable_extern_missing.tn  36_symbolic_unknown_scalar_call_ok.tn  37_test_extern_call.tn  37_valid_extern_tensor_type.tn  38_error_extern_mixedtensor_duplicate_attr.tn  39_valid_extern_call.tn  (+18 more)
tests/mlir/: field_type_ops.mlir
tools/: CMakeLists.txt
tools/Printer/: Printer.cpp
tools/Tester/: CMakeLists.txt  main.cpp
tools/Tester/Printer/: Printer.cpp  Printer.hpp
tools/driver/: CMakeLists.txt  main.cpp
